--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,9 +59,17 @@
 
 <script>
   window.addEventListener('keydown', function(event){
-    const audio= document.querySelector(`audio[data-key]=${event.keyCode}`)
+    const audio= document.querySelector(`audio[data-key="${event.keyCode}"]`)
     console.log(audio)
+    const key= document.querySelector(`.key[data-key="${event.keyCode}"]`)
+    console.log(key)
+    if (!audio) return //exits the function
+    audio.currentTime = 0 // should rewind time so that each sound can be played multiple times
+    audio.play()// method that plays the audio on selected keyCode
+    key.classList.add('playing')
   })
+
+  const keys = document.querySelectorAll('.key')
 </script>
 
 
