--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,8 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEventListener('keydown', function(event){
+
+  function playSound(event) {
     const audio= document.querySelector(`audio[data-key="${event.keyCode}"]`)
     console.log(audio)
     const key= document.querySelector(`.key[data-key="${event.keyCode}"]`)
@@ -67,9 +68,18 @@
     audio.currentTime = 0 // should rewind time so that each sound can be played multiple times
     audio.play()// method that plays the audio on selected keyCode
     key.classList.add('playing')
-  })
+  }
+
+  function removeTransition(event) {
+    if(event.propertyName !== 'transform') return
+    this.classList.remove('playing')
+  }
 
   const keys = document.querySelectorAll('.key')
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition))
+
+  window.addEventListener('keydown', playSound )
+
 </script>
 
 
